--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
         <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
       </div>
     </div>
+
     <!-- Image Slider End -->
+    <div style="height: 40px; width: 100%;"></div>
 
 
 
