--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
         outline: none !important;
         background-clip: border-box !important;
       }
+      #home-slider .slide-item {
+        min-height: 300px !important;
+        height: 35vh !important;
+        background-size: cover !important;
+        background-position: center !important;
+      }
+    }
+    @media (max-width: 575.98px) {
+      #home-slider .slide-item {
+        min-height: 180px !important;
+        height: 28vh !important;
+      }
     }
   </style>
 
