--- a/index.html
+++ b/index.html
@@ -62,9 +62,15 @@
         display: block !important;
         opacity: 1 !important;
         visibility: visible !important;
+        height: auto !important;
+        min-height: 0 !important;
+        background: transparent !important;
       }
       #home-slider .slide-item {
         background-color: transparent !important;
+        display: block !important;
+        opacity: 1 !important;
+        visibility: visible !important;
       }
     }
     @media (max-width: 575.98px) {
