--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </header>
 
     <!-- Image Slider Start -->
-    <div class="site-blocks-cover overlay" data-aos="fade" id="home-slider" style="padding: 0; background: none; border: none; box-shadow: none;">
+    <div class="site-blocks-cover overlay d-none d-md-block" data-aos="fade" id="home-slider" style="padding: 0; background: none; border: none; box-shadow: none;">
       <div class="slide-one-item home-slider owl-carousel">
         <div class="slide-item" style="background-image: url('images/img_1.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
         <div class="slide-item" style="background-image: url('images/img_2.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
@@ -182,7 +182,7 @@
     </div>
 
     <!-- Image Slider End -->
-    <div class="slider-spacer" style="height: 40px; width: 100%;"></div>
+    <div class="slider-spacer d-none d-md-block" style="height: 40px; width: 100%;"></div>
 
 
 
