--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
   <link rel="stylesheet" href="css/style.css">
   <style>
+    h2 {
+      color: #d32f2f !important;
+    }
     /* Remove border/shadow from slider and slides on mobile and tablet */
     @media (max-width: 991.98px) {
       #home-slider,
