--- a/index.html
+++ b/index.html
@@ -124,16 +124,7 @@
                     <li><a href="#">Product</a></li>
                     <li><a href="#">Pre Wedding</a></li>
                     <li><a href="#">Wedding</a></li>
-                    <li><a href="#">Sports</a></li>
-                    <li><a href="#">Travel</a></li>
-                    <li class="has-children">
-                      <a href="#">Sub Menu</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Menu One</a></li>
-                        <li><a href="#">Menu Two</a></li>
-                        <li><a href="#">Menu Three</a></li>
-                      </ul>
-                    </li>
+                    <li><a href="#">Baby</a></li>
                   </ul>
                 </li>
                 <li><a href="services.html">Services</a></li>
@@ -244,42 +235,14 @@
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3" style="color:#fff;">Sports</h2>
+              <h2 class="mb-3" style="color:#fff;">Baby</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_6.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
 
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3" style="color:#fff;">Travel</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-            </div>
-            <img src="images/img_7.jpg" alt="Image" class="img-fluid">
-          </div>
-        </div>
 
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">People</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-            </div>
-            <img src="images/img_3.jpg" alt="Image" class="img-fluid">
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Architecture</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-            </div>
-            <img src="images/img_4.jpg" alt="Image" class="img-fluid">
-          </div>
-        </div>
 
       </div>
     </div>
