--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <li><a href="#">Baby</a></li>
                   </ul>
                 </li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="services.html">Video</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
