--- a/video.html
+++ b/video.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Photosen &mdash; Colorlib Website Template</title>
+  <title>Video &mdash; Pallab Photography</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -76,7 +76,7 @@
                     </li>
                   </ul>
                 </li>
-                <li class="active"><a href="services.html">Services</a></li>
+                <li class="active"><a href="video.html">video</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
