--- a/video.html
+++ b/video.html
@@ -115,72 +115,34 @@
 
 
 
-    <div class="site-section"  data-aos="fade">
+    <div class="site-section" data-aos="fade">
       <div class="container-fluid">
-
         <div class="row justify-content-center">
-
           <div class="col-md-7">
             <div class="row mb-5">
               <div class="col-12 ">
-                <h2 class="site-section-heading text-center text-black">My Services</h2>
+                <h2 class="site-section-heading text-center" style="color:#d32f2f;">Video Gallery</h2>
               </div>
             </div>
           </div>
-
         </div>
-        
+        <div class="row" id="youtube-gallery">
+          <!-- YouTube videos will be inserted here -->
+          <!-- Example video block (replace with your links):
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="youtube-video-card text-center">
+              <a href="https://www.youtube.com/watch?v=VIDEO_ID" target="_blank" rel="noopener">
+                <img src="https://img.youtube.com/vi/VIDEO_ID/hqdefault.jpg" alt="Video Title" class="img-fluid mb-2" style="border-radius:8px;">
+                <div class="video-title" style="color:#111;font-weight:600;">Video Title</div>
+              </a>
+            </div>
+          </div>
+          -->
+        </div>
         <div class="row">
-          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-            <div class="h-100 p-4 p-lg-5 site-block-feature-7">
-              <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
-              <h3 class="text-black h4">Camera</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-              <p><strong class="font-weight-bold text-primary">$29</strong></p>
-            </div>
+          <div class="col-12 text-center mt-4">
+            <p style="color:#888;">Send your YouTube video links to display them here!</p>
           </div>
-          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-            <div class="h-100 p-4 p-lg-5 site-block-feature-7">
-              <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
-              <h3 class="text-black h4">Wedding Photography</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-              <p><strong class="font-weight-bold text-primary">$46</strong></p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-            <div class="h-100 p-4 p-lg-5 site-block-feature-7">
-              <span class="icon flaticon-sheep display-3 text-primary mb-4 d-block"></span>
-              <h3 class="text-black h4">Animal</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-              <p><strong class="font-weight-bold text-primary">$24</strong></p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-            <div class="h-100 p-4 p-lg-5 site-block-feature-7">
-              <span class="icon flaticon-frame display-3 text-primary mb-4 d-block"></span>
-              <h3 class="text-black h4">Portrait</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-              <p><strong class="font-weight-bold text-primary">$40</strong></p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-            <div class="h-100 p-4 p-lg-5 site-block-feature-7">
-              <span class="icon flaticon-eiffel-tower display-3 text-primary mb-4 d-block"></span>
-              <h3 class="text-black h4">Travel</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-              <p><strong class="font-weight-bold text-primary">$35</strong></p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-            <div class="h-100 p-4 p-lg-5 site-block-feature-7">
-              <span class="icon flaticon-video-play display-3 text-primary mb-4 d-block"></span>
-              <h3 class="text-black h4">Video Editing</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-              <p><strong class="font-weight-bold text-primary">$15</strong></p>
-            </div>
-          </div>
-
         </div>
       </div>
     </div>
