--- a/video.html
+++ b/video.html
@@ -127,17 +127,87 @@
           </div>
         </div>
         <div class="row" id="youtube-gallery">
-          <!-- YouTube videos will be inserted here -->
-          <!-- Example video block (replace with your links):
+          <!-- YouTube videos inserted below -->
           <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
             <div class="youtube-video-card text-center">
-              <a href="https://www.youtube.com/watch?v=VIDEO_ID" target="_blank" rel="noopener">
-                <img src="https://img.youtube.com/vi/VIDEO_ID/hqdefault.jpg" alt="Video Title" class="img-fluid mb-2" style="border-radius:8px;">
-                <div class="video-title" style="color:#111;font-weight:600;">Video Title</div>
+              <a href="https://youtu.be/3lRZ-4-M_Y8?si=rNnZ0-YaT0I-jfMM" target="_blank" rel="noopener">
+                <img src="https://img.youtube.com/vi/3lRZ-4-M_Y8/hqdefault.jpg" alt="Video 1" class="img-fluid mb-2" style="border-radius:8px;">
+                <div class="video-title" style="color:#111;font-weight:600;">Video 1</div>
               </a>
             </div>
           </div>
-          -->
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="youtube-video-card text-center">
+              <a href="https://youtu.be/TjPSY4gENOI?si=nLZgqf9zLdcSXazV" target="_blank" rel="noopener">
+                <img src="https://img.youtube.com/vi/TjPSY4gENOI/hqdefault.jpg" alt="Video 2" class="img-fluid mb-2" style="border-radius:8px;">
+                <div class="video-title" style="color:#111;font-weight:600;">Video 2</div>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="youtube-video-card text-center">
+              <a href="https://youtu.be/1lnyhnQO2K8?si=suF1A6uOUMuRDftP" target="_blank" rel="noopener">
+                <img src="https://img.youtube.com/vi/1lnyhnQO2K8/hqdefault.jpg" alt="Video 3" class="img-fluid mb-2" style="border-radius:8px;">
+                <div class="video-title" style="color:#111;font-weight:600;">Video 3</div>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="youtube-video-card text-center">
+              <a href="https://youtu.be/psY54piaY-k?si=_Fz25iu1CJmNWq8z" target="_blank" rel="noopener">
+                <img src="https://img.youtube.com/vi/psY54piaY-k/hqdefault.jpg" alt="Video 4" class="img-fluid mb-2" style="border-radius:8px;">
+                <div class="video-title" style="color:#111;font-weight:600;">Video 4</div>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="youtube-video-card text-center">
+              <a href="https://youtu.be/qdNAdS_CEMo?si=2LTl-_7icPX_BIOn" target="_blank" rel="noopener">
+                <img src="https://img.youtube.com/vi/qdNAdS_CEMo/hqdefault.jpg" alt="Video 5" class="img-fluid mb-2" style="border-radius:8px;">
+                <div class="video-title" style="color:#111;font-weight:600;">Video 5</div>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="youtube-video-card text-center">
+              <a href="https://youtu.be/07rQr1_PX2A?si=9Cm9tK48s26KcyUs" target="_blank" rel="noopener">
+                <img src="https://img.youtube.com/vi/07rQr1_PX2A/hqdefault.jpg" alt="Video 6" class="img-fluid mb-2" style="border-radius:8px;">
+                <div class="video-title" style="color:#111;font-weight:600;">Video 6</div>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="youtube-video-card text-center">
+              <a href="https://youtu.be/eWnsyaQcDpg?si=WCxtvP-tcjrG44fV" target="_blank" rel="noopener">
+                <img src="https://img.youtube.com/vi/eWnsyaQcDpg/hqdefault.jpg" alt="Video 7" class="img-fluid mb-2" style="border-radius:8px;">
+                <div class="video-title" style="color:#111;font-weight:600;">Video 7</div>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="youtube-video-card text-center">
+              <a href="https://youtu.be/bEZT_v8qelw?si=oFMtw0YWNCKY4Tpa" target="_blank" rel="noopener">
+                <img src="https://img.youtube.com/vi/bEZT_v8qelw/hqdefault.jpg" alt="Video 8" class="img-fluid mb-2" style="border-radius:8px;">
+                <div class="video-title" style="color:#111;font-weight:600;">Video 8</div>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="youtube-video-card text-center">
+              <a href="https://youtu.be/WZo-QBcta8Y?si=oQloh4XFr2cg00hx" target="_blank" rel="noopener">
+                <img src="https://img.youtube.com/vi/WZo-QBcta8Y/hqdefault.jpg" alt="Video 9" class="img-fluid mb-2" style="border-radius:8px;">
+                <div class="video-title" style="color:#111;font-weight:600;">Video 9</div>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="youtube-video-card text-center">
+              <a href="https://youtu.be/yB1gTYN0l34?si=bAkuYiVwzfsL354l" target="_blank" rel="noopener">
+                <img src="https://img.youtube.com/vi/yB1gTYN0l34/hqdefault.jpg" alt="Video 10" class="img-fluid mb-2" style="border-radius:8px;">
+                <div class="video-title" style="color:#111;font-weight:600;">Video 10</div>
+              </a>
+            </div>
+          </div>
         </div>
         <div class="row">
           <div class="col-12 text-center mt-4">
