--- a/video.html
+++ b/video.html
@@ -135,7 +135,7 @@
               </div>
             </div>
             <div class="col-md-6 text-md-left text-center">
-              <h4 style="color:#d32f2f;font-weight:600;">Video 1</h4>
+              <h4 style="color:#d32f2f;font-weight:600;">Vikash x Neha Cinematic Pre Wedding</h4>
             </div>
           </div>
           <div class="row align-items-center mb-5 flex-md-row flex-column">
