--- a/index.html
+++ b/index.html
@@ -164,6 +164,13 @@
       
     </header>
 
+
+    <!-- Mobile Static Image Start -->
+    <div class="site-blocks-cover d-block d-lg-none" id="mobile-landing-image" style="padding:0; background: none; border: none; box-shadow: none; min-height:100vh; height:100vh; width:100vw; position:relative;">
+      <img src="images/mobile-landing.jpg" alt="Mobile Landing" style="width:100vw; height:100vh; object-fit:cover; object-position:center; display:block;">
+    </div>
+    <!-- Mobile Static Image End -->
+
     <!-- Image Slider Start -->
     <div class="site-blocks-cover overlay d-none d-lg-block" data-aos="fade" id="home-slider" style="padding: 0; background: none; border: none; box-shadow: none;">
       <div class="slide-one-item home-slider owl-carousel">
@@ -174,7 +181,6 @@
         <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
       </div>
     </div>
-
     <!-- Image Slider End -->
     <div class="slider-spacer d-none d-lg-block" style="height: 40px; width: 100%;"></div>
 
