--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
     <div class="site-blocks-cover d-block d-lg-none" id="mobile-landing-image" style="padding:0; background: none; border: none; box-shadow: none; min-height:100vh; height:100vh; width:100vw; position:relative;">
       <img src="images/mobile-landing.jpg" alt="Mobile Landing" style="width:100vw; height:100vh; object-fit:cover; object-position:center; display:block;">
     </div>
+    <div class="d-block d-lg-none" style="height:40px;"></div>
     <!-- Mobile Static Image End -->
 
     <!-- Image Slider Start -->
