--- a/contact.html
+++ b/contact.html
@@ -43,75 +43,58 @@
 
 
 
-<header class="site-navbar py-3" role="banner">
-
-<div class="container-fluid">
-<div class="row align-items-center">
-
-<div class="col-6 col-xl-2" data-aos="fade-down">
-<h1 class="mb-0"><a href="index.html" class="site-logo"><img src="tvwlogo.png" alt="The Vedic Wedding Logo"><span class="sr-only">The Vedic Wedding</span></a></h1>
-</div>
-<div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
-<nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
-
-<ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-<li><a href="index.html">Home</a></li>
-<li class="has-children">
-<a href="single.html">Gallery</a>
-<ul class="dropdown">
-<li><a href="#">Nature</a></li>
-<li><a href="#">Portrait</a></li>
-<li><a href="#">People</a></li>
-<li><a href="#">Architecture</a></li>
-<li><a href="#">Animals</a></li>
-<li><a href="#">Sports</a></li>
-<li><a href="#">Travel</a></li>
-<li class="has-children">
-<a href="#">Sub Menu</a>
-<ul class="dropdown">
-<li><a href="#">Menu One</a></li>
-<li><a href="#">Menu Two</a></li>
-<li><a href="#">Menu Three</a></li>
-</ul>
-</li>
-</ul>
-</li>
-<li><a href="services.html">Services</a></li>
-<li><a href="about.html">About</a></li>
-<li class="active"><a href="contact.html">Contact</a></li>
-</ul>
-</nav>
-</div>
-
-<div class="col-6 col-xl-2 text-right" data-aos="fade-down">
-<div class="d-none d-xl-inline-block">
-<ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
-                <li>
-                  <a href="https://www.facebook.com/thevedicwedding" class="pl-0 pr-3" target="_blank" rel="noopener"><span class="icon-facebook"></span></a>
-                </li>
-                <li>
-                  <a href="https://www.pinterest.com/thevedicwedding" class="pl-3 pr-3" target="_blank" rel="noopener"><span class="icon-pinterest"></span></a>
-                </li>
-                <li>
-                  <a href="https://www.behance.net/thevedicwedding" class="pl-3 pr-3" target="_blank" rel="noopener"><span class="icon-behance"></span></a>
-                </li>
-                <li>
-                  <a href="https://www.instagram.com/thevedicwedding" class="pl-3 pr-3" target="_blank" rel="noopener"><span class="icon-instagram"></span></a>
-                </li>
-                <li>
-                  <a href="https://www.youtube.com/@thevedicwedding" class="pl-3 pr-3" target="_blank" rel="noopener"><span class="icon-youtube-play"></span></a>
-                </li>
-</ul>
-</div>
-
-<div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
-
-</div>
-
-</div>
-</div>
-
+<header class="site-navbar py-3 navbar-solid" role="banner" style="position:fixed; top:0; left:0; width:100%; background:#fff; z-index:1000; box-shadow:0 2px 8px rgba(0,0,0,0.06);">
+  <div class="container-fluid">
+    <div class="row align-items-center">
+      <div class="col-6 col-xl-2" data-aos="fade-down">
+        <h1 class="mb-0"><a href="index.html" class="site-logo"><img src="tvwlogo.png" alt="The Vedic Wedding Logo"><span class="sr-only">The Vedic Wedding</span></a></h1>
+      </div>
+      <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
+        <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
+          <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="single.html">Gallery</a></li>
+            <li><a href="video.html">Video</a></li>
+            <li><a href="about.html">About</a></li>
+            <li class="active"><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="col-6 col-xl-2 text-right" data-aos="fade-down">
+        <div class="d-none d-xl-inline-block">
+          <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
+            <li>
+              <a href="https://www.facebook.com/thevedicwedding" class="pl-0 pr-3" target="_blank" rel="noopener"><span class="icon-facebook"></span></a>
+            </li>
+            <li>
+              <a href="https://www.pinterest.com/thevedicwedding" class="pl-3 pr-3" target="_blank" rel="noopener"><span class="icon-pinterest"></span></a>
+            </li>
+            <li>
+              <a href="https://www.behance.net/thevedicwedding" class="pl-3 pr-3" target="_blank" rel="noopener"><span class="icon-behance"></span></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/thevedicwedding" class="pl-3 pr-3" target="_blank" rel="noopener"><span class="icon-instagram"></span></a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/@thevedicwedding" class="pl-3 pr-3" target="_blank" rel="noopener"><span class="icon-youtube-play"></span></a>
+            </li>
+          </ul>
+        </div>
+        <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
+      </div>
+    </div>
+  </div>
 </header>
+
+<script>
+  // Adjust body padding-top to navbar height to prevent content overlap
+  document.addEventListener('DOMContentLoaded', function() {
+    var navbar = document.querySelector('.site-navbar');
+    if (navbar) {
+      document.body.style.paddingTop = navbar.offsetHeight + 'px';
+    }
+  });
+</script>
 
 
 
