--- a/about.html
+++ b/about.html
@@ -55,7 +55,17 @@
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="single.html">Gallery</a></li>
+                <li class="has-children">
+                  <a href="single.html">Gallery</a>
+                  <ul class="dropdown">
+                    <li><a href="#">Fashion</a></li>
+                    <li><a href="#">Food</a></li>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">Pre Wedding</a></li>
+                    <li><a href="#">Wedding</a></li>
+                    <li><a href="#">Baby</a></li>
+                  </ul>
+                </li>
                 <li><a href="video.html">Video</a></li>
                 <li class="active"><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
